# flask-validate-gzip

./: flake.nix  pyproject.toml
app/: __init__.py  pydantic_base_model.py
app/controllers/comm_actions/: __init__.py  routes.py
app/utils/: __init__.py  inflate.py
