[tool.poetry]
name = "flask-app-gzip"
version = "0.1.0"
description = ""
authors = ["Gustavo Porto <gustavo@portosanti.com>"]
readme = "README.md"
packages = [{include = "flask_app_gzip"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
flask-pydantic = "^0.11.0"
pydantic = "^1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
